--- a/src/css/layout/_base.scss
+++ b/src/css/layout/_base.scss
@@ -4,8 +4,8 @@
 
 h1, h2, h3, h4, a{
     font-family: _font(family);
-    font-weight: 500;
-    color: white;
+    font-weight: _font(weight);
+    color: _palette(baseText);
 }
 
 h1{
@@ -34,6 +34,12 @@ a{
     font-weight: _font(weight-bold);
 }
 
+@media (max-width:_breakpoints(mobileL)) {
+    h1{
+        font-size: 2.5rem;
+    }
+}
+
 //
 //List stuff
 //
@@ -46,6 +52,9 @@ ul{
 body{
     background: _palette(main);
     line-height: 1.5rem;
+    h1{
+        line-height: 2.5rem;
+    }
 }
 
 //
