--- a/src/css/sections/_contact.scss
+++ b/src/css/sections/_contact.scss
@@ -1,5 +1,5 @@
 #contact{
-    padding: 10em 3em 1em;
+    padding: 5em 3em 1em;
     background: _palette(contactBG);
 
     a{
@@ -14,6 +14,6 @@
 
 @media (max-width:_breakpoints(tablet)) {
     #contact{
-        padding: 10em 2em 1em;
+        padding: 5em 2em 1em;
     }
 }
